@@ -3,6 +3,7 @@
         * Version 1.3.0 released
         =========================
 
+        Protect GEbounds::set_lin() and set_log() methods from invalid arguments (#1989)
         Copy shared Python libraries instead of creating a symbolic link (#1987)
         Added FITS image conversion operators (#1986)
         If code originates from Git, always compile the Python bindings (#1985)
